moving previous repo to backend folder
1

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@
 *.sql
 dummy_data.txt
 reset_db.py
-app/test_keys.py
-app/create_user.py
+backend/app/test_keys.py
+backend/app/create_user.py
+backend/app/test_keys.py
+backend/app/create_user.py
